# sheets-db

./: LICENSE  ProjectReport.docx  README.md  boxes.cabal  project.docx  sheets-db.cabal  stack.yaml
app/: Main.hs
src/: API.hs  GoogleRequest.hs  GoogleSheet.hs  Lib.hs  SheetDB.hs  SheetTypes.hs
test/: Spec.hs
