name:                sheets-db
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/AdityaKumarRavikanti/Boxes#readme
license:             MIT
license-file:        LICENSE
author:              Aditya Kumar Ravikanti
maintainer:          adityaravikanti@outlook.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SheetDB, SheetTypes
  Other-Modules:       GoogleRequest
  build-depends:       base >= 4.7 && < 5
                       , http-conduit
                       , bytestring
                       , aeson,
                       url,
                       unordered-containers,
                       vector,
                       mtl,
                       transformers,
                       scientific,
                       connection,
                       http-types
                       , google-oauth2
                       , text
                       , xml
                       , time
                       , resourcet
  default-language:    Haskell2010

executable boxes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      , text
                      , sheets-db
  default-language:    Haskell2010

test-suite sheets-db-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                      , sheets-db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AdityaKumarRavikanti/Boxes
